Date: Fri, 26 Sep 2014 10:57:34 +0000
Mime-Version: 1.0 (Produced by PhpWiki 1.5.0)
Content-Type: application/x-phpwiki;
  pagename=ReleaseNotes;
  flags=PAGE_LOCKED;
  charset=UTF-8
Content-Transfer-Encoding: binary

<<CreateToc with_toclink||=1 headers||=1,2,3 width=300px position=right>>

== 1.5.1 2014-09-xx Marc-Etienne Vargenau ==

* fix Bug#456 'Optimizing Database' message sometimes printed on page
* remove ~FrameInclude plugin (frames are not supported in HTML 5)
* sort tables with [[http://tablesorter.com|tablesorter jQuery plugin]] instead of sortable.js
* fix Bug#636 Recursive include is not trapped
* fix Bug#647 undefined method WikiDB_backend_dba::WikiDB_backend_dbaBase
* correct total number of pages for AllPagesCreatedByMe, AllPagesOwnedByMe, AllPagesLastEditedByMe
* fix Bug#607 BackLinks do not work inside a [[Help:RichTablePlugin|RichTable]]
* fix Bug#646 Wrong number of links in BackLinks
* make <includeonly> work

== 1.5.0 2014-07-29 Marc-Etienne Vargenau ==

=== Main Changes ===
* ~PhpWiki 1.5.0 needs at least PHP 5.3. It is compatible with PHP 5.3, 5.4 and 5.5.
* One single wiki markup, based on Wikicreole and compatible with classic phpWiki markup.
* Full HTML 5 and CSS 3. A modern browser is needed.
* Full UTF-8.

=== Other Changes ===
* Fix bad display in Toolbox menu (Sidebar and Monobook themes) reported by Harold Hallikainen
* Fix Captcha problem reported by Harold Hallikainen
* Merge ~OldTextFormattingRules into ~TextFormattingRules
* ~SyntaxHighlighter plugin is now implemented with [[http://highlightjs.org/]] instead of [[http://www.andre-simon.de]].
* Chmod action is removed.
* New action: ~DeleteAcl
* Updated documentation pages in pgsrc.
* Updated translations.

== 1.4.0 2014-07-25 Reini Urban, Marc-Etienne Vargenau, Sabri Labbenes, Sébastien Le Callonnec ==

~PhpWiki 1.4.0 is the same as ~PhpWiki 1.4.0RC1. It is the last release compatible with PHP 4.
